--- a/app/views/wissensgebiete/edit.html.erb
+++ b/app/views/wissensgebiete/edit.html.erb
@@ -6,7 +6,7 @@
     <div id="error_explanation">
       <h2>
         <%= pluralize(@wissensgebiet.errors.count, "error") %> Das Wissensgebiet konnte nicht
-        erstellt werden!
+        bearbeitet werden!
       </h2>
       <ul>
         <% @wissensgebiet.errors.full_messages.each do |msg| %>
