--- a/app/views/wissensgebiete/show.html.erb
+++ b/app/views/wissensgebiete/show.html.erb
@@ -10,7 +10,8 @@
       <td><%= fachmodul.id %></td>
       <td><%= fachmodul.titel %></td>
       <td><%= fachmodul.beschreibung %></td>
-      <td><%= fachmodul.benutzer.name %></td>
+
+      <td><%= link_to fachmodul.benutzer.name, {:controller => "benutzer", :action => "show", :benutzer => fachmodul.benutzer.id }%></td>
       <td><%= link_to 'Fachmodul bearbeiten', edit_wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul) %></td>
       <td><%= link_to 'Fachmodul löschen', wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul),
               method: :delete,
