--- a/app/views/wissensgebiete/edit.html.erb
+++ b/app/views/wissensgebiete/edit.html.erb
@@ -1,35 +1,95 @@
-<h1>Wissensgebiet bearbeiten</h1>
 
-<%= form_for @wissensgebiet, url: {action:"update"}, local: true do |form| %>
+<html>
+  <head>
+    <title> Wissensgebiet bearbeiten </title>
+    <style type="text/css">
+        body {
+          background-color: #DADADA;
+        }
 
-  <% if @wissensgebiet.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@wissensgebiet.errors.count, "error") %> Das Wissensgebiet konnte nicht
-        bearbeitet werden!
-      </h2>
-      <ul>
-        <% @wissensgebiet.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
+    </style>
+      <script src="/assets/jquery.js" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+      <script src="/assets/semantic.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(){
+          $('#hamburger').on("click",function(){
+            $('.ui.sidebar')
+            .sidebar('toggle')
+            ;
+          });
+        })
+
+
+
+      </script>
+  </head>
+  <body>
+
+    <div class="ui black vertical inverted left visible sidebar menu">
+      <div class="item">
+        Tutor*in werden
+      </div>
+      <div class="item">
+        Logout
+      </div>
     </div>
-  <% end %>
+      <div class="pusher">
+        <div class="ui stackable left aligned grid">
+          <div class="row">
+            <div class="column">
+              <div class="ui red inverted segment">
 
-  <p>
-    <%= form.label :titel %><br>
-    <%= form.text_field :titel %>
-  </p>
+                <h1 class="ui white header">
 
-  <p>
-    <%= form.label :beschreibung %><br>
-    <%= form.text_area :beschreibung %>
-  </p>
+                  <i class="white bars icon" id="hamburger" ></i>
 
-  <p>
-    <%= form.submit "Wissensgebiet bearbeiten"%>
-  </p>
+                  <div class="content"> Wissensgebiet bearbeiten </div>
+                </h1>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="ui big breadcrumb">
+                <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
+                <i class="right chevron icon divider"></i>
+                <div class="active section">Wissensgebiet bearbeiten</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
 
-<% end %>
+        <% if @wissensgebiet.errors.any? %>
+          <div id="error_explanation">
+            <div class="ui error message">
+              <p>Wissensgebiet konnte nicht bearbeitet werden!</p>
+              <ul>
+                <% @wissensgebiet.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        <% end %>
 
-<%= link_to 'Zurück', wissensgebiete_index_path %>
+        <%= form_for @wissensgebiet, url: {action:"update"}, local: true do |form| %>
+        <div class="ui form segment">
+          <div class="field">
+            <label><%= form.label :titel %></label>
+            <%= form.text_field :titel,placeholder: "Titel" %>
+          </div>
+          <div class="field">
+            <label><%= form.label :beschreibung %></label>
+            <%= form.text_area :beschreibung, placeholder: "Beschreibung" %>
+          </div>
+          <%= form.submit "Wissensgebiet bearbeiten", class: "ui primary submit button"%>
+
+        </div>
+        <% end %>
+      </div>
+  </body>
+</html>
