--- a/app/views/wissensgebiete/index.html.erb
+++ b/app/views/wissensgebiete/index.html.erb
@@ -1,19 +1,124 @@
-<h1>Wissensgebietsübersicht</h1>
-<%= link_to 'Neues Wissensgebiet erstellen', new_wissensgebiete_path %>
-<table>
+
+<html>
+  <head>
+    <title> Wissensgebietübersicht </title>
+    <style type="text/css">
+        body {
+          background-color: #DADADA;
+        }
+
+    </style>
+      <script src="/assets/jquery.js" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+      <script src="/assets/semantic.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(){
+          $('#hamburger').on("click",function(){
+            $('.ui.sidebar')
+            .sidebar('toggle')
+            ;
+          });
+        })
 
 
-  <% @wissensgebiete.each do |wissensgebiet| %>
-    <tr>
-      <td><%= wissensgebiet.id %></td>
-      <td><%= wissensgebiet.titel %></td>
-      <td><%= wissensgebiet.beschreibung %></td>
-      <td><%= link_to 'Wissensgebiet bearbeiten', edit_wissensgebiete_path(wissensgebiet) %></td>
-      <td><%= link_to 'Wissensgebiet löschen', wissensgebiete_path(wissensgebiet),
-              method: :delete,
-              data: { confirm: 'Sind Sie sicher, dass Sie dieses Wissensgebiet löschen möchten?' } %></td>
-      <td><%= link_to 'Fachmodulübersicht des Wissensgebietes', wissensgebiete_path(wissensgebiet) %></td>
-<!--that link in heading-->
-    </tr>
-  <% end %>
-</table>
+
+      </script>
+  </head>
+  <body>
+    <div class="ui black vertical inverted left visible sidebar menu">
+
+      <div class="item">
+        <div class="ui search">
+          <div class="ui icon input">
+            <input class="prompt" placeholder="Wissensgebiet suchen" type="text">
+            <i class="search icon"></i>
+          </div>
+          <div class="results"></div>
+        </div>
+      </div>
+
+      <%=link_to 'wissensgebiete/new' do%>
+        <div class="item">
+          Neues Wissensgebiet erstellen
+        </div>
+      <%end%>
+
+      <div class="item">
+        Tutor*in werden
+      </div>
+      <%=link_to '/' do%>
+
+        <div class="item">
+          Logout
+        </div>
+      <%end%>
+
+    </div>
+    <div class="pusher">
+      <div class="ui stackable center aligned grid">
+      <div class="row">
+        <div class="column">
+          <div class="ui red inverted segment">
+
+            <h1 class="ui white header">
+
+              <i class="white bars icon" id="hamburger" ></i>
+
+              <div class="content"> Wissensgebietsübersicht </div>
+            </h1>
+          </div>
+        </div>
+          </div>
+        <div class="row">
+          <% @wissensgebiete.each do |wissensgebiet| %>
+          <!--<h3 class="ui red header">
+            <div class="ui content">   <%= wissensgebiet.titel[0] %></div>
+          </h3>-->
+            <div class="four wide column">
+              <p>
+
+                <div class="ui padded red segment">
+
+                <h3 class="ui red header">
+                  <div class="ui content">   <%= link_to wissensgebiet.titel, wissensgebiete_path(wissensgebiet) %></div>
+                </h3>
+
+                <div class="ui content">
+                  <p> <%= wissensgebiet.beschreibung %></p>
+                </div>
+
+                <p>
+                  <div class="ui button">
+                    <%= link_to 'Wissensgebiet bearbeiten', edit_wissensgebiete_path(wissensgebiet) %>
+                    <i class="red edit icon"></i>
+                  </div>
+                </p>
+                <div class="ui button">
+                  <%= link_to 'Wissensgebiet löschen', wissensgebiete_path(wissensgebiet),
+                          method: :delete,
+                          data: { confirm: 'Sind Sie sicher, dass Sie dieses Wissensgebiet löschen möchten?' } %>
+                  <i class=" red trash icon"></i>
+                </div>
+
+              </div>
+            </p>
+
+            </div>
+          <%end%>
+          </div>
+
+        </div>
+      </div>
+
+
+
+      <div class="ui right floated button">
+      </div>
+
+      <div class="ui left floated button">
+      </div>
+    </div>
+  </body>
+</html>
