--- a/app/views/wissensgebiete/index.html.erb
+++ b/app/views/wissensgebiete/index.html.erb
@@ -42,16 +42,22 @@
       <%=link_to 'wissensgebiete/new' do%>
         <div class="item">
           Neues Wissensgebiet erstellen
+          <i class="ui white plus icon"></i>
+
         </div>
       <%end%>
 
       <div class="item">
         Tutor*in werden
+        <i class="ui white graduation cap icon"></i>
+
       </div>
       <%=link_to '/' do%>
 
         <div class="item">
           Logout
+          <i class="ui white sign-out icon"></i>
+
         </div>
       <%end%>
 
