--- a/app/views/wissensgebiete/new.html.erb
+++ b/app/views/wissensgebiete/new.html.erb
@@ -28,11 +28,22 @@
   <body>
 
     <div class="ui black vertical inverted left visible sidebar menu">
+      <%=link_to '/wissensgebiete' do%>
+      <div class="item">
+        Startseite
+        <i class="ui white home icon"></i>
+
+      </div>
+      <%end%>
       <div class="item">
         Tutor*in werden
+        <i class="ui white graduation cap icon"></i>
+
       </div>
       <div class="item">
         Logout
+        <i class="ui white sign-out icon"></i>
+
       </div>
     </div>
       <div class="pusher">
