--- a/app/views/fachmoduls/show.html.erb
+++ b/app/views/fachmoduls/show.html.erb
@@ -1,15 +1,109 @@
-<h1>test</h1>
-<table>
+<!--is index page from fachmoduls-->
+
+<html>
+  <head>
+    <title> Wissensgebietübersicht </title>
+    <style type="text/css">
+        body {
+          background-color: #DADADA;
+        }
+
+    </style>
+      <script src="/assets/jquery.js" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+      <script src="/assets/semantic.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(){
+          $('#hamburger').on("click",function(){
+            $('.ui.sidebar')
+            .sidebar('toggle')
+            ;
+          });
+        })
 
 
-  <% @lernmethoden.each do |lernmethode| %>
-    <tr>
-      <td> <%= link_to lernmethode.name,
-        wissensgebiete_fachmodul_lernmethoden_path(@wissensgebiet,@fachmodul, lernmethode) %></td>
-<!--TODO in controller if fachmodul is informatik then display codelab, not anwendungsfälle-->
+
+      </script>
+  </head>
+  <body>
+    <div class="ui black vertical inverted left visible sidebar menu">
+
+      <%=link_to '/wissensgebiete' do%>
+      <div class="item">
+        Startseite
+        <i class="ui white home icon"></i>
+
+      </div>
+      <%end%>
+
+      <div class="item">
+        Tutor*in werden
+        <i class="ui white graduation cap icon"></i>
+
+      </div>
+      <%=link_to '/' do%>
+
+        <div class="item">
+          Logout
+          <i class="ui white sign-out icon"></i>
+
+        </div>
+      <%end%>
+
+    </div>
+    <div class="pusher">
+      <div class="ui stackable left aligned grid">
+      <div class="row">
+        <div class="column">
+          <div class="ui red inverted segment">
+
+            <h1 class="ui white header">
+
+              <i class="white bars icon" id="hamburger" ></i>
+
+              <div class="content"> Lernmethodenübersicht <%= @fachmodul.titel%> </div>
+            </h1>
+          </div>
+        </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="ui big breadcrumb">
+                <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
+                <i class="right chevron icon divider"></i>
+                <%= link_to @wissensgebiet.titel,wissensgebiete_path(@wissensgebiet) %>
+                <i class="right chevron icon divider"></i>
+                <div class="active section">Lernmethodenübersicht <%= @fachmodul.titel%></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+
+        <div class="ui stackable center alligned grid">
+            <% @lernmethoden.each do |lernmethode| %>
+            <div class="row">
+
+              <div class="column">
+                <h3 class="ui black header">
+
+                  <div class="ui red segment"> <%= link_to lernmethode.name,
+                        wissensgebiete_fachmodul_lernmethoden_path(@wissensgebiet,@fachmodul, lernmethode) %></div>
+                </h3>
+
+              </div>
+            </div>
+
+            <% end %>
+
+        </div>
 
 
-    </tr>
-  <% end %>
-</table>
-<%= link_to 'Zurück', wissensgebiete_path(@wissensgebiet) %>
+
+
+
+    </div>
+  </body>
+</html>
