--- a/app/views/inhalts/show.html.erb
+++ b/app/views/inhalts/show.html.erb
@@ -1,5 +1,94 @@
-<h1>Inhalt <%= @inhalt.titel%></h1>
-<p><%=@inhalt.inhalt%></p>
-<p><%=@inhalt.gemeldet%></p>
 
-<%= link_to 'Zurück', wissensgebiete_fachmodul_lernmethoden_path(@wissensgebiet,@fachmodul,@lernmethode) %>
+<html>
+  <head>
+    <title> Wissensgebiet erstellen </title>
+    <style type="text/css">
+        body {
+          background-color: #DADADA;
+        }
+
+    </style>
+      <script src="/assets/jquery.js" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+      <script src="/assets/semantic.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(){
+          $('#hamburger').on("click",function(){
+            $('.ui.sidebar')
+            .sidebar('toggle')
+            ;
+          });
+        })
+
+
+
+      </script>
+  </head>
+  <body>
+
+    <div class="ui black vertical inverted left visible sidebar menu">
+      <%=link_to '/wissensgebiete' do%>
+      <div class="item">
+        Startseite
+        <i class="ui white home icon"></i>
+
+      </div>
+      <%end%>
+      <div class="item">
+        Tutor*in werden
+        <i class="ui white graduation cap icon"></i>
+
+      </div>
+      <div class="item">
+        Logout
+        <i class="ui white sign-out icon"></i>
+
+      </div>
+    </div>
+      <div class="pusher">
+        <div class="ui stackable left aligned grid">
+          <div class="row">
+            <div class="column">
+              <div class="ui red inverted segment">
+
+                <h1 class="ui white header">
+
+                  <i class="white bars icon" id="hamburger" ></i>
+
+                  <div class="content"> <%=@inhalt.titel%><</div>
+                </h1>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="ui big breadcrumb">
+                <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
+                <i class="right chevron icon divider"></i>
+                <%= link_to @wissensgebiet.titel,  wissensgebiete_path(@wissensgebiet) %>
+                <i class="right chevron icon divider"></i>
+
+                <%= link_to @fachmodul.titel,  wissensgebiete_fachmodul_path(@wissensgebiet,@fachmodul) %>
+                <i class="right chevron icon divider"></i>
+
+
+                <%= link_to @lernmethode.name, wissensgebiete_fachmodul_lernmethoden_path(@wissensgebiet,@fachmodul,@lernmethode) %>
+                <i class="right chevron icon divider"></i>
+                <div class="active section"> <%=@inhalt.titel%></div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+
+
+        <div class="ui segment">
+          <p><%=@inhalt.inhalt%></p>
+          <p>gemeldet: <%=@inhalt.gemeldet%></p>
+        </div>
+      </div>
+  </body>
+</html>
