--- a/app/views/lernmethoden/show.html.erb
+++ b/app/views/lernmethoden/show.html.erb
@@ -1,23 +1,154 @@
-<h1>Inhaltsübersicht</h1>
-<%= link_to 'Neuen Inhalt erstellen', new_wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul, @lernmethode) %>
+<!--is index page from fachmoduls-->
 
-<table>
+<html>
+  <head>
+    <title> Wissensgebietübersicht </title>
+    <style type="text/css">
+        body {
+          background-color: #DADADA;
+        }
+
+    </style>
+      <script src="/assets/jquery.js" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+      <script src="/assets/semantic.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(){
+          $('#hamburger').on("click",function(){
+            $('.ui.sidebar')
+            .sidebar('toggle')
+            ;
+          });
+        })
 
 
-  <% @inhalts.each do |inhalt| %>
-    <tr>
-      <td><%= inhalt.id %></td>
-      <td><%= inhalt.titel %></td>
-      <td><%= inhalt.inhalt %></td>
-      <td><%= inhalt.gemeldet %></td>
-      <td><%= link_to 'Inhalt bearbeiten', edit_wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt) %></td>
-      <td><%= link_to 'Inhalt löschen',wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt),
-                    method: :delete,
-                    data: { confirm: 'Sind Sie sicher, dass Sie diesen Inhalt löschen möchten?' } %></td>
-      <td><%= link_to 'Inhalt ansehen', wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt) %></td>
+
+      </script>
+  </head>
+  <body>
+    <div class="ui black vertical inverted left visible sidebar menu">
 
 
-    </tr>
-  <% end %>
-</table>
-  <%= link_to 'Zurück', wissensgebiete_fachmodul_path(@wissensgebiet,@fachmodul) %>
+    <%=link_to '/wissensgebiete' do%>
+    <div class="item">
+      Startseite
+      <i class="ui white home icon"></i>
+
+    </div>
+    <%end%>
+    <div class="item">
+      <div class="ui search">
+        <div class="ui icon input">
+          <input class="prompt" placeholder="Inhalt suchen" type="text">
+          <i class="search icon"></i>
+        </div>
+        <div class="results"></div>
+      </div>
+    </div>
+      <%=link_to new_wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul, @lernmethode)  do%>
+        <div class="item">
+          Neuen Inhalt erstellen
+          <i class="ui white plus icon"></i>
+
+        </div>
+      <%end%>
+
+      <div class="item">
+        Tutor*in werden
+        <i class="ui white graduation cap icon"></i>
+
+      </div>
+      <%=link_to '/' do%>
+
+        <div class="item">
+          Logout
+          <i class="ui white sign-out icon"></i>
+
+        </div>
+      <%end%>
+
+    </div>
+    <div class="pusher">
+      <div class="ui stackable left aligned grid">
+      <div class="row">
+        <div class="column">
+          <div class="ui red inverted segment">
+
+            <h1 class="ui white header">
+
+              <i class="white bars icon" id="hamburger" ></i>
+
+              <div class="content"> Inhaltsübersicht - <%= @lernmethode.name%></div>
+            </h1>
+          </div>
+        </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="ui big breadcrumb">
+                <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
+                <i class="right chevron icon divider"></i>
+                <%= link_to @wissensgebiet.titel,  wissensgebiete_path(@wissensgebiet) %>
+                <i class="right chevron icon divider"></i>
+
+                <%= link_to @fachmodul.titel,  wissensgebiete_fachmodul_path(@wissensgebiet,@fachmodul) %>
+                <i class="right chevron icon divider"></i>
+
+                <div class="active section"><%= @lernmethode.name%> </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="ui stackable center aligned grid">
+
+        <div class="row">
+          <% @inhalts.each do |inhalt| %>
+
+            <div class="four wide column">
+              <p>
+
+                <div class="ui padded red segment">
+
+                <h3 class="ui red header">
+                  <div class="ui content">   <%= link_to inhalt.titel, wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt) %></div>
+                </h3>
+
+                <div class="ui content">
+                  gemeldet: <%=inhalt.gemeldet%>
+                </div>
+                <br>
+                <br>
+                <div class="ui content">
+                  <p> <%= inhalt.inhalt %></p>
+                </div>
+                <p>
+                  <div class="ui button">
+                    <%= link_to 'Inhalt bearbeiten',  edit_wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt)  %>
+                    <i class="red edit icon"></i>
+                  </div>
+                </p>
+                <div class="ui button">
+                  <%= link_to 'Inhalt löschen', wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt),
+                          method: :delete,
+                          data: { confirm: 'Sind Sie sicher, dass Sie diesen Inhalt löschen möchten?' } %>
+                  <i class=" red trash icon"></i>
+                </div>
+
+              </div>
+            </p>
+
+            </div>
+          <%end%>
+          </div>
+
+        </div>
+      </div>
+
+
+
+    </div>
+  </body>
+</html>
