--- a/app/views/wissensgebiete/show.html.erb
+++ b/app/views/wissensgebiete/show.html.erb
@@ -1,26 +1,153 @@
 <!--is index page from fachmoduls-->
-<h1>Fachmodulübersicht</h1>
-<%= link_to 'Neues Fachmodul erstellen', new_wissensgebiete_fachmodul_path(@wissensgebiet) %>
 
-<table>
+<html>
+  <head>
+    <title> Wissensgebietübersicht </title>
+    <style type="text/css">
+        body {
+          background-color: #DADADA;
+        }
+
+    </style>
+      <script src="/assets/jquery.js" type="text/javascript"></script>
+      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+      <script src="/assets/semantic.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(){
+          $('#hamburger').on("click",function(){
+            $('.ui.sidebar')
+            .sidebar('toggle')
+            ;
+          });
+        })
 
 
-  <% @fachmoduls.each do |fachmodul| %>
-    <tr>
-      <td><%= fachmodul.id %></td>
-      <td><%= fachmodul.titel %></td>
-      <td><%= fachmodul.beschreibung %></td>
 
-      <td><%= link_to fachmodul.benutzer.name, {:controller => "benutzer", :action => "show", :benutzer => fachmodul.benutzer.id }%></td>
-      <td><%= link_to 'Fachmodul bearbeiten', edit_wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul) %></td>
-      <td><%= link_to 'Fachmodul löschen', wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul),
-              method: :delete,
-              data: { confirm: 'Sind Sie sicher, dass Sie dieses Fachmodul löschen möchten?' } %></td>
-      <td><%= link_to 'Lernmethodenübersicht', wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul) %></td>
+      </script>
+  </head>
+  <body>
+    <div class="ui black vertical inverted left visible sidebar menu">
+      <%=link_to '/wissensgebiete' do%>
+      <div class="item">
+        Startseite
+        <i class="ui white home icon"></i>
+
+      </div>
+      <%end%>
+      <div class="item">
+        <div class="ui search">
+          <div class="ui icon input">
+            <input class="prompt" placeholder="Fachmodul suchen" type="text">
+            <i class="search icon"></i>
+          </div>
+          <div class="results"></div>
+        </div>
+      </div>
+
+
+      <%=link_to new_wissensgebiete_fachmodul_path(@wissensgebiet)  do%>
+        <div class="item">
+          Neues Fachmodul erstellen
+          <i class="ui white plus icon"></i>
+        </div>
+      <%end%>
+
+      <div class="item">
+        Tutor*in werden
+        <i class="ui white graduation cap icon"></i>
+      </div>
+      <%=link_to '/' do%>
+
+        <div class="item">
+          Logout
+          <i class="ui white sign-out icon"></i>
+
+        </div>
+      <%end%>
+
+    </div>
+    <div class="pusher">
+      <div class="ui stackable left aligned grid">
+      <div class="row">
+        <div class="column">
+          <div class="ui red inverted segment">
+
+            <h1 class="ui white header">
+
+              <i class="white bars icon" id="hamburger" ></i>
+
+              <div class="content"> Fachmodulübersicht </div>
+            </h1>
+          </div>
+        </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <div class="ui big breadcrumb">
+                <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
+                <i class="right chevron icon divider"></i>
+                <div class="active section"><%= @wissensgebiet.titel %></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="ui stackable center aligned grid">
+
+        <div class="row">
+          <% @fachmoduls.each do |fachmodul| %>
+          <!--<h3 class="ui red header">
+            <div class="ui content">   <%= fachmodul.titel[0] %></div>
+          </h3>-->
+            <div class="four wide column">
+              <p>
+
+                <div class="ui padded red segment">
+
+                <h3 class="ui red header">
+                  <div class="ui content">   <%= link_to fachmodul.titel, wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul) %></div>
+                </h3>
+
+                <div class="ui content">
+                  Ansprechpartner: <%= link_to fachmodul.benutzer.name, {:controller => "benutzer", :action => "show", :benutzer => fachmodul.benutzer.id }%>
+                </div>
+                <br>
+                <br>
+                <div class="ui content">
+                  <p> <%= fachmodul.beschreibung %></p>
+                </div>
+                <p>
+                  <div class="ui button">
+                    <%= link_to 'Fachmodul bearbeiten',  edit_wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul) %>
+                    <i class="red edit icon"></i>
+                  </div>
+                </p>
+                <div class="ui button">
+                  <%= link_to 'Fachmodul löschen', wissensgebiete_fachmodul_path(@wissensgebiet,fachmodul),
+                          method: :delete,
+                          data: { confirm: 'Sind Sie sicher, dass Sie dieses Fachmodul löschen möchten?' } %>
+                  <i class=" red trash icon"></i>
+                </div>
+
+              </div>
+            </p>
+
+            </div>
+          <%end%>
+          </div>
+
+        </div>
+      </div>
 
 
 
-    </tr>
-  <% end %>
-</table>
-<%= link_to 'Zurück', wissensgebiete_index_path %>
+      <div class="ui right floated button">
+      </div>
+
+      <div class="ui left floated button">
+      </div>
+    </div>
+  </body>
+</html>
