--- a/app/views/wissensgebiete/index.html.erb
+++ b/app/views/wissensgebiete/index.html.erb
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <title> Wissensgebietübersicht </title>
@@ -38,21 +37,83 @@
           <div class="results"></div>
         </div>
       </div>
+      <%  if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true %>
 
-      <%=link_to 'wissensgebiete/new' do%>
-        <div class="item">
-          Neues Wissensgebiet erstellen
-          <i class="ui white plus icon"></i>
+        <%=link_to 'wissensgebiete/new' do%>
+          <div class="item">
+            Neues Wissensgebiet erstellen
+            <i class="ui white plus icon"></i>
 
-        </div>
+          </div>
+        <%end%>
       <%end%>
 
-      <div class="item">
-        Tutor*in werden
-        <i class="ui white graduation cap icon"></i>
+      <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==false %>
 
+        <%=link_to 'rechte/tutorin' do%>
+          <div class="item">
+            Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==true %>
+        <%=link_to 'rechte/qualifizierte_tutorin' do%>
+          <div class="item">
+            qualifizierte Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user.admin==false && (current_user.ansprechpartner==true || current_user.qualTut==true) %>
+        <%=link_to 'rechte/admin' do%>
+          <div class="item">
+            Admin werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+
+      <% if current_user.admin==true %>
+
+        <%=link_to 'rechte/tutorin' do%>
+          <div class="item">
+            Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+
+        <%=link_to 'rechte/qualifizierte_tutorin' do%>
+          <div class="item">
+            qualifizierte Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+
+        <%=link_to 'rechte/admin' do%>
+          <div class="item">
+            Admin werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+
+      <% end %>
+
+      <% if current_user %>
+      <div class="item">
+        Eingeloggt als  <%= current_user.mail %>
       </div>
-      <%=link_to '/' do%>
+      <% else %>
+      <%= authorize %>
+      <% end %>
+
+
+
+
+      <%=link_to '/logout' do%>
 
         <div class="item">
           Logout
@@ -95,18 +156,23 @@
                   <p> <%= wissensgebiet.beschreibung %></p>
                 </div>
 
+                <%  if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true %>
                 <p>
                   <div class="ui button">
                     <%= link_to 'Wissensgebiet bearbeiten', edit_wissensgebiete_path(wissensgebiet) %>
                     <i class="red edit icon"></i>
                   </div>
                 </p>
+                <%end%>
+                <%  if current_user.admin==true %>
+
                 <div class="ui button">
                   <%= link_to 'Wissensgebiet löschen', wissensgebiete_path(wissensgebiet),
                           method: :delete,
                           data: { confirm: 'Sind Sie sicher, dass Sie dieses Wissensgebiet löschen möchten?' } %>
                   <i class=" red trash icon"></i>
                 </div>
+                <%end%>
 
               </div>
             </p>
