--- a/app/views/fachmoduls/new.html.erb
+++ b/app/views/fachmoduls/new.html.erb
@@ -1,3 +1,6 @@
+<%if current_user%>
+  <%  if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true %>
+
 <html>
   <head>
     <title> Wissensgebiet erstellen </title>
@@ -35,16 +38,49 @@
 
       </div>
       <%end%>
-      <div class="item">
-        Tutor*in werden
-        <i class="ui white graduation cap icon"></i>
+      <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==false %>
 
-      </div>
-      <div class="item">
-        Logout
-        <i class="ui white sign-out icon"></i>
+        <%=link_to 'rechte/tutorin' do%>
+          <div class="item">
+            Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
 
+      <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==true %>
+        <%=link_to 'rechte/qualifizierte_tutorin' do%>
+          <div class="item">
+            qualifizierte Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user.admin==false && (current_user.ansprechpartner==true || current_user.qualTut==true) %>
+        <%=link_to 'rechte/admin' do%>
+          <div class="item">
+            Admin werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+      <% if current_user %>
+      <div class="item">
+        Eingeloggt als  <%= current_user.mail %>
       </div>
+      <% else %>
+      <%= authorize %>
+      <% end %>
+
+      <%=link_to '/logout' do%>
+
+        <div class="item">
+          Logout
+          <i class="ui white sign-out icon"></i>
+
+        </div>
+      <%end%>
     </div>
       <div class="pusher">
         <div class="ui stackable left aligned grid">
@@ -111,3 +147,11 @@
       </div>
   </body>
 </html>
+
+  <%else %>
+  <%= forbidden%>
+  <% end%>
+
+<%else%>
+<%= authorize%>
+<%end%>
