--- a/app/views/lernmethoden/show.html.erb
+++ b/app/views/lernmethoden/show.html.erb
@@ -47,6 +47,8 @@
         <div class="results"></div>
       </div>
     </div>
+    <% if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true || current_user.tutor==true %>
+
       <%=link_to new_wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul, @lernmethode)  do%>
         <div class="item">
           Neuen Inhalt erstellen
@@ -54,13 +56,45 @@
 
         </div>
       <%end%>
+    <%end%>
 
+      <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==false %>
+
+        <%=link_to 'rechte/tutorin' do%>
+          <div class="item">
+            Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==true %>
+        <%=link_to 'rechte/qualifizierte_tutorin' do%>
+          <div class="item">
+            qualifizierte Tutor*in werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user.admin==false && (current_user.ansprechpartner==true || current_user.qualTut==true) %>
+        <%=link_to 'rechte/admin' do%>
+          <div class="item">
+            Admin werden
+            <i class="ui white graduation cap icon"></i>
+          </div>
+        <% end %>
+      <% end %>
+
+      <% if current_user %>
       <div class="item">
-        Tutor*in werden
-        <i class="ui white graduation cap icon"></i>
-
+        Eingeloggt als  <%= current_user.mail %>
       </div>
-      <%=link_to '/' do%>
+      <% else %>
+      <%= authorize %>
+      <% end %>
+
+      <%=link_to '/logout' do%>
 
         <div class="item">
           Logout
@@ -124,18 +158,25 @@
                 <div class="ui content">
                   <p> <%= inhalt.inhalt %></p>
                 </div>
+                <% if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true || current_user.tutor==true %>
+
                 <p>
                   <div class="ui button">
                     <%= link_to 'Inhalt bearbeiten',  edit_wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt)  %>
                     <i class="red edit icon"></i>
                   </div>
                 </p>
+                <%end%>
+                <%  if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true %>
+
                 <div class="ui button">
                   <%= link_to 'Inhalt löschen', wissensgebiete_fachmodul_lernmethoden_inhalt_path(@wissensgebiet,@fachmodul,@lernmethode,inhalt),
                           method: :delete,
                           data: { confirm: 'Sind Sie sicher, dass Sie diesen Inhalt löschen möchten?' } %>
                   <i class=" red trash icon"></i>
                 </div>
+                <%end%>
+
 
               </div>
             </p>
