--- a/app/views/wissensgebiete/new.html.erb
+++ b/app/views/wissensgebiete/new.html.erb
@@ -1,105 +1,151 @@
-<html>
-  <head>
-    <title> Wissensgebiet erstellen </title>
-    <style type="text/css">
-        body {
-          background-color: #DADADA;
-        }
+<%if current_user%>
+  <%  if current_user.admin==true || current_user.ansprechpartner==true || current_user.qualTut==true %>
 
-    </style>
-      <script src="/assets/jquery.js" type="text/javascript"></script>
-      <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
-      <script src="/assets/semantic.js" type="text/javascript"></script>
+  <html>
+    <head>
+      <title> Wissensgebiet erstellen </title>
+      <style type="text/css">
+          body {
+            background-color: #DADADA;
+          }
 
-      <script type="text/javascript">
+      </style>
+        <script src="/assets/jquery.js" type="text/javascript"></script>
+        <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
+        <script src="/assets/semantic.js" type="text/javascript"></script>
 
-        $(document).ready(function(){
-          $('#hamburger').on("click",function(){
-            $('.ui.sidebar')
-            .sidebar('toggle')
-            ;
-          });
-        })
+        <script type="text/javascript">
+
+          $(document).ready(function(){
+            $('#hamburger').on("click",function(){
+              $('.ui.sidebar')
+              .sidebar('toggle')
+              ;
+            });
+          })
 
 
 
-      </script>
-  </head>
-  <body>
+        </script>
+    </head>
+    <body>
 
-    <div class="ui black vertical inverted left visible sidebar menu">
-      <%=link_to '/wissensgebiete' do%>
-      <div class="item">
-        Startseite
-        <i class="ui white home icon"></i>
+      <div class="ui black vertical inverted left visible sidebar menu">
+        <%=link_to '/wissensgebiete' do%>
+        <div class="item">
+          Startseite
+          <i class="ui white home icon"></i>
 
+        </div>
+        <%end%>
+        <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==false %>
+
+          <%=link_to 'rechte/tutorin' do%>
+            <div class="item">
+              Tutor*in werden
+              <i class="ui white graduation cap icon"></i>
+            </div>
+          <% end %>
+        <% end %>
+
+        <% if current_user.admin==false && current_user.ansprechpartner==false && current_user.qualTut==false && current_user.tutor==true %>
+          <%=link_to 'rechte/qualifizierte_tutorin' do%>
+            <div class="item">
+              qualifizierte Tutor*in werden
+              <i class="ui white graduation cap icon"></i>
+            </div>
+          <% end %>
+        <% end %>
+
+        <% if current_user.admin==false && (current_user.ansprechpartner==true || current_user.qualTut==true) %>
+          <%=link_to 'rechte/admin' do%>
+            <div class="item">
+              Admin werden
+              <i class="ui white graduation cap icon"></i>
+            </div>
+          <% end %>
+        <% end %>
+
+        <% if current_user %>
+          <div class="item">
+            Eingeloggt als  <%= current_user.mail %>
+          </div>
+          <% else %>
+          <%= authorize %>
+          <% end %>
+
+          <%=link_to '/logout' do%>
+
+            <div class="item">
+              Logout
+              <i class="ui white sign-out icon"></i>
+
+            </div>
+          <%end%>
       </div>
-      <%end%>
-      <div class="item">
-        Tutor*in werden
-        <i class="ui white graduation cap icon"></i>
+        <div class="pusher">
+          <div class="ui stackable left aligned grid">
+            <div class="row">
+              <div class="column">
+                <div class="ui red inverted segment">
 
-      </div>
-      <div class="item">
-        Logout
-        <i class="ui white sign-out icon"></i>
+                  <h1 class="ui white header">
 
-      </div>
-    </div>
-      <div class="pusher">
-        <div class="ui stackable left aligned grid">
-          <div class="row">
-            <div class="column">
-              <div class="ui red inverted segment">
+                    <i class="white bars icon" id="hamburger" ></i>
 
-                <h1 class="ui white header">
-
-                  <i class="white bars icon" id="hamburger" ></i>
-
-                  <div class="content"> Neues Wissensgebiet erstellen </div>
-                </h1>
+                    <div class="content"> Neues Wissensgebiet erstellen </div>
+                  </h1>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="column">
+                <div class="ui big breadcrumb">
+                  <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
+                  <i class="right chevron icon divider"></i>
+                  <div class="active section">Wissensgebiet erstellen</div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="column">
-              <div class="ui big breadcrumb">
-                <%= link_to 'Wissensgebiete', wissensgebiete_index_path %>
-                <i class="right chevron icon divider"></i>
-                <div class="active section">Wissensgebiet erstellen</div>
+          <br>
+
+          <% if @wissensgebiet.errors.any? %>
+            <div id="error_explanation">
+              <div class="ui error message">
+                <p>Wissensgebiet konnte nicht erstellt werden!</p>
+                <ul>
+                  <% @wissensgebiet.errors.full_messages.each do |msg| %>
+                    <li><%= msg %></li>
+                  <% end %>
+                </ul>
               </div>
             </div>
-          </div>
-        </div>
-        <br>
+          <% end %>
 
-        <% if @wissensgebiet.errors.any? %>
-          <div id="error_explanation">
-            <div class="ui error message">
-              <p>Wissensgebiet konnte nicht erstellt werden!</p>
-              <ul>
-                <% @wissensgebiet.errors.full_messages.each do |msg| %>
-                  <li><%= msg %></li>
-                <% end %>
-              </ul>
+          <%= form_for @wissensgebiet, url: {action:"create"}, local: true do |form| %>
+          <div class="ui form segment">
+            <div class="field">
+              <label><%= form.label :titel %></label>
+              <%= form.text_field :titel,placeholder: "Titel" %>
             </div>
-          </div>
-        <% end %>
+            <div class="field">
+              <label><%= form.label :beschreibung %></label>
+              <%= form.text_area :beschreibung,placeholder: "Beschreibung" %>
+            </div>
+            <%= form.submit "Wissensgebiet erstellen", class: "ui primary submit button"%>
 
-        <%= form_for @wissensgebiet, url: {action:"create"}, local: true do |form| %>
-        <div class="ui form segment">
-          <div class="field">
-            <label><%= form.label :titel %></label>
-            <%= form.text_field :titel,placeholder: "Titel" %>
           </div>
-          <div class="field">
-            <label><%= form.label :beschreibung %></label>
-            <%= form.text_area :beschreibung,placeholder: "Beschreibung" %>
-          </div>
-          <%= form.submit "Wissensgebiet erstellen", class: "ui primary submit button"%>
-
+          <% end %>
         </div>
-        <% end %>
-      </div>
-  </body>
-</html>
+    </body>
+  </html>
+
+
+  <%else %>
+  <%= forbidden%>
+  <% end%>
+
+<%else%>
+<%= authorize%>
+<%end%>
