--- a/app/views/inhalts/show.html.erb
+++ b/app/views/inhalts/show.html.erb
@@ -122,6 +122,8 @@
 
         <div class="ui segment">
           <p><%=@inhalt.inhalt%></p>
+          <p>Erstellt von: <%=@benutzer.name%></p>
+
           <p>gemeldet: <%=@inhalt.gemeldet%></p>
         </div>
       </div>
